change style and margin 8.1.1 ประเมินความเสี่ยงโครงการด้านงบประมาณ 8.1.2 ประเมินความเสี่ยงโครงการด้านประสิทธิภาพ 8.1.3 ประเมินความเสี่ยงโครงการรวม 8.2 ประเมินความเสี่ยงระบบสารสนเทศ 8.3.1 ประเมินความถี่การตรวจ 8.3.2 ประเมินการจัดเก็บรายได้ 8.3.3 ประเมินคดี

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-2/int08-1-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-2/int08-1-2.component.html
@@ -54,7 +54,7 @@
       </div>
 
       <div class="ui eight column grid">
-        <div class="column">
+        <div class="column right aligned">
           ปัจจัยเสี่ยง:
         </div>
 
