--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-3/int08-1-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-3/int08-1-3.component.html
@@ -32,7 +32,7 @@
         </div>
       </div>
       <div class="ui eight column grid">
-        <div class="column">
+        <div class="column right aligned">
           ปัจจัยเสี่ยง:
         </div>
 
@@ -52,12 +52,12 @@
           <br> อยู่ระหว่าง
         </div>
 
-        <div class="column" style="width: 10%;">
+        <div class="column" style="width: 8%;" align="right">
           &nbsp;
           <br>
-          <br> 0 - 1
-          <br> 1.1 - 2
-          <br> 2.1 - 3
+          <br>0 - 1
+          <br>1.1 - 2
+          <br><span style="margin:3%">2.1 - 3</span>
         </div>
 
         <div class="column right aligned" style="width: 10%;">
