--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2.component.html
@@ -50,7 +50,7 @@
       </div>
 
       <div class="ui eight column grid">
-        <div class="column">
+        <div class="column right aligned">
           ปัจจัยเสี่ยง:
         </div>
 
@@ -116,16 +116,8 @@
               <th colspan="8">ผลการตรวจสอบระบบสารสนเทศ (จำนวนครั้งที่ระบบใช้งานไม่ได้)</th>
               <th rowspan="2">จำนวนครั้งรวมที่ระบบใช้งานไม่ได้</th>
               <th rowspan="2">วิเคราะห์</th>
-              <th rowspan="2" style="width: 8%;">
-                <a href="javascript:;" (click)="popupEditData()">
-                  RL
-                </a>
-              </th>
-              <th rowspan="2" style="width: 8%;">
-                <a href="javascript:;" (click)="popupEditData()">
-                  แปลค่า
-                </a>
-              </th>
+              <th rowspan="2" style="width: 8%;">RL</th>
+              <th rowspan="2" style="width: 8%;">แปลค่า</th>
             </tr>
             <tr style="text-align: center;">
               <th style="border-left: 1px solid rgba(34,36,38,.1); width: 8%;">มี.ค. 59</th>
