--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-1/int08-3-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-1/int08-3-1.component.html
@@ -43,14 +43,14 @@
       <br>
       <div class="ui grid center aligned">
         <div class="sixteen wide column">
-          กระดาษทำการประเมินความเสี่ยงความถี่การตรวจเพื่อพิจารณาคัดเลือกหน่วยงานรับตรวจสำนักงานสรรพสามิตภาค พื้นที่ และสาขา													
+          กระดาษทำการประเมินความเสี่ยงความถี่การตรวจเพื่อพิจารณาคัดเลือกหน่วยงานรับตรวจสำนักงานสรรพสามิตภาค พื้นที่ และสาขา
           <br> ปีงบประมาณ พ.ศ. 2561
           <br> กลุ่มตรวจสอบภายใน กรมสรรพสามิต
         </div>
       </div>
 
       <div class="ui eight column grid">
-        <div class="column">
+        <div class="column right aligned">
           ปัจจัยเสี่ยง:
         </div>
 
@@ -68,11 +68,11 @@
           <br> มากกว่า
         </div>
 
-        <div class="column" style="width: 5%;">
+        <div class="column" style="width: 5%;" align="right">
           &nbsp;
           <br>1-2
           <br>3-5
-          <br>5
+          <br><span style="margin-right: 10%;">5</span>
         </div>
 
         <div class="column right aligned" style="width: 10%;">
@@ -123,16 +123,8 @@
               <th style="width:6%;">2558</th>
               <th style="width:6%;">2559</th>
               <th style="width:6%;">2560</th>
-              <th style="width:8%;">
-                <a href="javascript:;" (click)="popupEditData()">
-                  RL
-                </a>
-              </th>
-              <th style="width:8%;">
-                <a href="javascript:;" (click)="popupEditData()">
-                  แปลค่า
-                </a>
-              </th>
+              <th style="width:8%;">RL</th>
+              <th style="width:8%;">แปลค่า</th>
             </tr>
           </thead>
           <tbody>
