--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-2/int08-3-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-2/int08-3-2.component.html
@@ -54,12 +54,12 @@
         </div>
       </div>
       <div class="ui eight column grid">
-        <div class="column">
+        <div  class="column right aligned">
           ปัจจัยเสี่ยง:
         </div>
 
         <div class="column" style="width: 30%;">
-          5. ประสิทธิภาพของการจัดเก็บรายได้
+         <span style="margin-left:1%"> 5. ประสิทธิภาพของการจัดเก็บรายได้ </span>
           <br> ได้รับการตรวจสอบภายในแล้ว
           <br> ได้รับการตรวจสอบภายในแล้ว
           <br> ได้รับการตรวจสอบภายในแล้ว
@@ -72,11 +72,11 @@
           <br> มากกว่า
         </div>
 
-        <div class="column" style="width: 10%;">
+        <div class="column" style="width: 10%;" align="right">
           &nbsp;
           <br>0
           <br>0-100
-          <br>100
+          <br><span style="margin-right: 4%;">100</span>
         </div>
 
         <div class="column right aligned" style="width: 10%;">
