--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-3/int08-3-3-1/int08-3-3-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-3/int08-3-3-1/int08-3-3-1.component.html
@@ -54,7 +54,7 @@
         </div>
       </div>
       <div class="ui eight column grid">
-        <div class="column">
+        <div class="column right aligned">
           ปัจจัยเสี่ยง:
         </div>
 
@@ -74,12 +74,12 @@
           <br> มากกว่า
         </div>
 
-        <div class="column" style="width: 10%;">
+        <div class="column" style="width: 10%;" align="right">
           &nbsp;
           <br>
           <br>0
           <br>0-100
-          <br>100
+          <br><span style="margin-right:3%">100</span>
         </div>
 
         <div class="column right aligned" style="width: 10%;">
