--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-1/int08-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-1/int08-1-1.component.html
@@ -54,7 +54,7 @@
       </div>
 
       <div class="ui nine column grid">
-        <div class="column">
+        <div class="column right aligned">
           ปัจจัยเสี่ยง:
         </div>
 
@@ -63,7 +63,6 @@
           <br> งบประมาณดำเนินโครงการ
           <br> งบประมาณดำเนินโครงการ
           <br> งบประมาณดำเนินโครงการ
-          <br>
         </div>
 
         <div class="column">
@@ -71,47 +70,41 @@
           <br> น้อยกว่า
           <br> อยู่ระหว่าง
           <br> มากกว่า
-          <br>
         </div>
 
-        <div class="column" style="width: 20%;">
+        <div class="column" style="width: 20%;" align="center" >
           &nbsp;
           <br> 5,000,000
           <br> 5,000,000 - 15,000,000
-          <br> 15,000,000
-          <br>
+          <br> 15,000,000          
         </div>
 
         <div class="column right aligned" style="width: 10%;">
           &nbsp;
           <br> กำหนดค่าเป็น
           <br> กำหนดค่าเป็น
-          <br> กำหนดค่าเป็น
-          <br>
+          <br> กำหนดค่าเป็น          
         </div>
 
         <div class="column" style="width: 2%;">
           &nbsp;
           <br> 1
           <br> 2
-          <br> 3
-          <br>
+          <br> 3          
         </div>
 
         <div class="column" style="width: 10%;">
           &nbsp;
           <br> กำหนดค่าเป็น
           <br> กำหนดค่าเป็น
-          <br> กำหนดค่าเป็น
-          <br>
+          <br> กำหนดค่าเป็น          
         </div>
 
         <div class="column" style="width: 2%;">
           &nbsp;
           <br> ต่ำ
           <br> กลาง
-          <br> สูง
-          <br>
+          <br> สูง          
         </div>
 
 
