--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-3/int08-3-3-3/int08-3-3-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-3/int08-3-3-3/int08-3-3-3.component.html
@@ -33,7 +33,7 @@
         </div>
       </div>
       <div class="ui eight column grid">
-        <div class="column">
+        <div class="column right aligned">
           ปัจจัยเสี่ยง:
         </div>
 
@@ -53,12 +53,12 @@
           <br> อยู่ระหว่าง
         </div>
 
-        <div class="column" style="width: 10%;">
+        <div class="column" style="width: 10%;" align="right">
           &nbsp;
           <br>
           <br>0 - 1
           <br>1.1 - 2
-          <br>2.1 - 3
+          <br><span style="margin-right:3%">2.1 - 3</span>
         </div>
 
         <div class="column right aligned" style="width: 10%;">
