change content popup

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-1/int08-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-1/int08-1-1.component.html
@@ -353,7 +353,7 @@
 <div id="modalInt0811" class="ui modal hidden transition">
   <i class="close icon"></i>
   <div class="header">
-    กำหนดเงื่อนไขแปลงค่า
+    กำหนดเงื่อนไข RL และแปลงค่าประเมินความเสี่ยงโครงการด้านงบประมาณ								
   </div>
 
   <div class="content">
