--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-3/int08-1-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-3/int08-1-3.component.html
@@ -302,7 +302,7 @@
 <div id="modalInt0813" class="ui modal hidden transition">
   <i class="close icon"></i>
   <div class="header">
-    กำหนดเงื่อนไข RL และแปลงค่า
+    กำหนดเงื่อนไข RL และแปลงค่าประเมินความเสี่ยงโครงการ								
   </div>
 
   <div class="content">
@@ -437,7 +437,7 @@
 <div id="modalInt0813-weight-data" class="ui small modal hidden transition">
   <i class="close icon"></i>
   <div class="header">
-    กำหนดค่าน้ำหนัก
+    กำหนดค่าน้ำหนัก (%) ประเมินความเสี่ยงโครงการ						
   </div>
 
   <div class="content">
