--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-1/int08-3-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-1/int08-3-1.component.html
@@ -38,6 +38,10 @@
             <i class="print icon"></i>
             พิมพ์
           </button>
+          <button class="ui mini default button" (click)="popupEditData()">
+            <i class="setting icon"></i>
+            กำหนด RL
+          </button>
         </div>
       </div>
       <br>
@@ -72,7 +76,8 @@
           &nbsp;
           <br>1-2
           <br>3-5
-          <br><span style="margin-right: 10%;">5</span>
+          <br>
+          <span style="margin-right: 10%;">5</span>
         </div>
 
         <div class="column right aligned" style="width: 10%;">
@@ -358,7 +363,7 @@
 <div id="modalInt0831" class="ui modal hidden transition">
   <i class="close icon"></i>
   <div class="header">
-    กำหนดเงื่อนไข RL และแปลงค่า
+    กำหนดเงื่อนไข RL และแปลงค่าประเมินความถี่การตรวจ								
   </div>
 
   <div class="content">
