--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-3/int08-3-3-2/int08-3-3-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-3/int08-3-3-2/int08-3-3-2.component.html
@@ -315,7 +315,7 @@
 <div id="modalInt08332" class="ui modal hidden transition">
   <i class="close icon"></i>
   <div class="header">
-    กำหนดเงื่อนไข RL และแปลงค่า
+    กำหนดเงื่อนไข RL และแปลงค่าประเมินคดีด้านจำนวนค่าปรับ								
   </div>
 
   <div class="content">
