--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-3/int08-3-3-3/int08-3-3-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-3/int08-3-3-3/int08-3-3-3.component.html
@@ -284,7 +284,7 @@
 <div id="modalInt08333" class="ui modal hidden transition">
   <i class="close icon"></i>
   <div class="header">
-    กำหนดเงื่อนไข RL และแปลงค่า
+    กำหนดเงื่อนไข RL และแปลงค่าประเมินความเสี่ยงคดี								
   </div>
 
   <div class="content">
@@ -420,7 +420,7 @@
 <div id="modalInt08333-weight-data" class="ui small modal hidden transition">
   <i class="close icon"></i>
   <div class="header">
-    กำหนดค่าน้ำหนัก
+    กำหนดค่าน้ำหนัก (%) ประเมินความเสี่ยงคดี						
   </div>
 
   <div class="content">
