--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2.component.html
@@ -39,6 +39,10 @@
             พิมพ์
           </button>
         </div>
+        <button class="ui mini default button" (click)="popupEditData()">
+          <i class="setting icon"></i>
+          กำหนด RL
+        </button>
       </div>
       <br>
       <div class="ui grid center aligned">
@@ -574,7 +578,7 @@
 <div id="modalInt082" class="ui modal hidden transition">
   <i class="close icon"></i>
   <div class="header">
-    กำหนดเงื่อนไข RL และแปลงค่า
+    กำหนดเงื่อนไข RL และแปลงค่าประเมินความเสี่ยงระบบสารสนเทศ								
   </div>
 
   <div class="content">
