--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-3/int08-3-3-1/int08-3-3-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-3/int08-3-3-1/int08-3-3-1.component.html
@@ -317,7 +317,7 @@
 <div id="modalInt08331" class="ui modal hidden transition">
   <i class="close icon"></i>
   <div class="header">
-    กำหนดเงื่อนไข RL และแปลงค่า
+    กำหนดเงื่อนไข RL และแปลงค่าประเมินคดีด้านจำนวนคดี								
   </div>
 
   <div class="content">
