--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-3/int08-3-3-3/int08-3-3-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-3/int08-3-3-3/int08-3-3-3.component.html
@@ -9,20 +9,35 @@
     <div class="ui attached segment">
       <div class="ui right aligned grid">
         <div class="sixteen wide column">
+          <button class="ui mini primary button" (click)="popupWeightData()">
+            <i class="setting icon"></i>
+            กำหนด %
+          </button>
+          <button class="ui mini primary button" (click)="popupEditData()">
+            <i class="setting icon"></i>
+            กำหนด RL
+          </button>
+          <button class="ui mini primary button">
+            <i class=" save icon"></i>
+            บันทึก
+          </button>
           <button class="ui mini primary button">
             <i class="print icon"></i>
             พิมพ์
           </button>
-          <button class="ui mini default button" (click)="popupWeightData()">
-            <i class="setting icon"></i>
-            กำหนด %
-          </button>
-          <button class="ui mini default button" (click)="popupEditData()">
-            <i class="setting icon"></i>
-            กำหนด RL
-          </button>
+          <div class="ui mini primary button">
+            <div class="ui simple dropdown item">
+              ส่งออก
+              <i class="dropdown icon"></i>
+              <div class="menu">
+                <div class="item">PDF</div>
+                <div class="item">Excel</div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
+
       <br>
       <div class="ui grid center aligned">
         <div class="sixteen wide column">
@@ -58,7 +73,8 @@
           <br>
           <br>0 - 1
           <br>1.1 - 2
-          <br><span style="margin-right:3%">2.1 - 3</span>
+          <br>
+          <span style="margin-right:3%">2.1 - 3</span>
         </div>
 
         <div class="column right aligned" style="width: 10%;">
@@ -272,9 +288,13 @@
     <br>
     <div class="ui center aligned grid">
       <div class="sixteen wide column">
-        <button class="ui mini button" routerLink="/int08-1">
+        <button class="ui mini button" routerLink="/int08-3-3-2">
           <i class="arrow left icon"></i>
           ย้อนกลับ
+        </button>
+        <button class="ui mini button" routerLink="/int08-3-4">
+          ถัดไป
+          <i class="arrow right icon"></i>
         </button>
       </div>
     </div>
@@ -284,7 +304,7 @@
 <div id="modalInt08333" class="ui modal hidden transition">
   <i class="close icon"></i>
   <div class="header">
-    กำหนดเงื่อนไข RL และแปลงค่าประเมินความเสี่ยงคดี								
+    กำหนดเงื่อนไข RL และแปลงค่าประเมินความเสี่ยงคดี
   </div>
 
   <div class="content">
@@ -420,7 +440,7 @@
 <div id="modalInt08333-weight-data" class="ui small modal hidden transition">
   <i class="close icon"></i>
   <div class="header">
-    กำหนดค่าน้ำหนัก (%) ประเมินความเสี่ยงคดี						
+    กำหนดค่าน้ำหนัก (%) ประเมินความเสี่ยงคดี
   </div>
 
   <div class="content">
