--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-2/int08-1-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-2/int08-1-2.component.html
@@ -34,14 +34,28 @@
     <div class="ui segment" *ngIf="showData">
       <div class="ui right aligned grid">
         <div class="sixteen wide column">
+          <button class="ui mini primary button" (click)="popupEditData()">
+            <i class="setting icon"></i>
+            กำหนด RL
+          </button>
+          <button class="ui mini primary button">
+            <i class=" save icon"></i>
+            บันทึก
+          </button>
           <button class="ui mini primary button">
             <i class="print icon"></i>
             พิมพ์
           </button>
-          <button class="ui mini default button" (click)="popupEditData()">
-            <i class="setting icon"></i>
-            กำหนด RL
-          </button>
+          <div class="ui mini primary button">
+            <div class="ui simple dropdown item">
+              ส่งออก
+              <i class="dropdown icon"></i>
+              <div class="menu">
+                <div class="item">PDF</div>
+                <div class="item">Excel</div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       <br>
@@ -256,9 +270,13 @@
     <br>
     <div class="ui center aligned grid">
       <div class="sixteen wide column">
-        <button class="ui mini button" routerLink="/int08-1">
+        <button class="ui mini button" routerLink="/int08-1-1">
           <i class="arrow left icon"></i>
           ย้อนกลับ
+        </button>
+        <button class="ui mini button" routerLink="/int08-1-3">
+          ถัดไป
+          <i class="arrow right icon"></i>
         </button>
       </div>
     </div>
@@ -268,7 +286,7 @@
 <div id="modalInt0812" class="ui modal hidden transition">
   <i class="close icon"></i>
   <div class="header">
-    กำหนดเงื่อนไข RL และแปลงค่าประเมินความเสี่ยงโครงการด้านประสิทธิภาพ								
+    กำหนดเงื่อนไข RL และแปลงค่าประเมินความเสี่ยงโครงการด้านประสิทธิภาพ
   </div>
 
   <div class="content">
