--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-2/int08-3-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-2/int08-3-2.component.html
@@ -34,16 +34,31 @@
     <div class="ui segment" *ngIf="showData">
       <div class="ui right aligned grid">
         <div class="sixteen wide column">
+          <button class="ui mini primary button" (click)="popupEditData()">
+            <i class="setting icon"></i>
+            กำหนด RL
+          </button>
+          <button class="ui mini primary button">
+            <i class=" save icon"></i>
+            บันทึก
+          </button>
           <button class="ui mini primary button">
             <i class="print icon"></i>
             พิมพ์
           </button>
-          <button class="ui mini default button" (click)="popupEditData()">
-            <i class="setting icon"></i>
-            กำหนด RL
-          </button>
+          <div class="ui mini primary button">
+            <div class="ui simple dropdown item">
+              ส่งออก
+              <i class="dropdown icon"></i>
+              <div class="menu">
+                <div class="item">PDF</div>
+                <div class="item">Excel</div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
+
       <br>
       <div class="ui grid center aligned">
         <div class="sixteen wide column">
@@ -54,12 +69,12 @@
         </div>
       </div>
       <div class="ui eight column grid">
-        <div  class="column right aligned">
+        <div class="column right aligned">
           ปัจจัยเสี่ยง:
         </div>
 
         <div class="column" style="width: 30%;">
-         <span style="margin-left:1%"> 5. ประสิทธิภาพของการจัดเก็บรายได้ </span>
+          <span style="margin-left:1%"> 5. ประสิทธิภาพของการจัดเก็บรายได้ </span>
           <br> ได้รับการตรวจสอบภายในแล้ว
           <br> ได้รับการตรวจสอบภายในแล้ว
           <br> ได้รับการตรวจสอบภายในแล้ว
@@ -76,7 +91,8 @@
           &nbsp;
           <br>0
           <br>0-100
-          <br><span style="margin-right: 4%;">100</span>
+          <br>
+          <span style="margin-right: 4%;">100</span>
         </div>
 
         <div class="column right aligned" style="width: 10%;">
@@ -304,10 +320,15 @@
     <br>
     <div class="ui center aligned grid">
       <div class="sixteen wide column">
-        <button class="ui mini button" routerLink="/int08-3">
+        <button class="ui mini button" routerLink="/int08-3-1">
           <i class="arrow left icon"></i>
           ย้อนกลับ
         </button>
+        <button class="ui mini button" routerLink="/int08-3-3">
+          ถัดไป
+          <i class="arrow right icon"></i>
+        </button>
+
       </div>
     </div>
 
@@ -317,7 +338,7 @@
 <div id="modalInt0832" class="ui modal hidden transition">
   <i class="close icon"></i>
   <div class="header">
-    กำหนดเงื่อนไข RL และแปลงค่าประเมินการจัดเก็บรายได้								
+    กำหนดเงื่อนไข RL และแปลงค่าประเมินการจัดเก็บรายได้
   </div>
 
   <div class="content">
