--- a/workspace/ims-webapp/src/main/resources/templates/thymeleaf/seedstartermng.html
+++ b/workspace/ims-webapp/src/main/resources/templates/thymeleaf/seedstartermng.html
@@ -5,14 +5,14 @@
   <head>
     <title>Spring Thyme Seed Starter Manager</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link rel="stylesheet" type="text/css" media="all" href="../../resources/css/stsm.css" th:href="@{/resources/css/stsm.css}"/>
+    <link rel="stylesheet" type="text/css" media="all" href="../../static/css/stsm.css" th:href="@{/css/stsm.css}"/>
   </head>
 
   <body>
 
     <div>
-      <img src="../../resources/images/stsmlogo.png" alt="STSM logo" title="STSM logo" 
-           th:src="@{/resources/images/stsmlogo.png}" th:alt-title="#{title.application}"/>
+      <img src="../../static/images/stsmlogo.png" alt="STSM logo" title="STSM logo" 
+           th:src="@{/images/stsmlogo.png}" th:alt-title="#{title.application}"/>
     </div>
     
     <div class="seedstarterlist" th:unless="${#lists.isEmpty(allSeedStarters)}">
